--- a/pagina2/style.css
+++ b/pagina2/style.css
@@ -11,8 +11,14 @@ header {
 }
 
 header a {
+    font-size: 100px;
     margin: 30px;
     text-decoration: none;
+    font-size: 30px;
+    color: red;
+}
+
+header p {
     font-size: 30px;
     color: red;
 }
@@ -33,7 +39,7 @@ header a {
 .primeira p {
     color: red;
     margin-left: 5%;
-    width: 20%;
+    width: 30%;
 }
 
 .segunda {
@@ -44,7 +50,7 @@ header a {
 .segunda-imagem {
     width: 225px;
     height: 390px;
-    margin: 0 100px 0 30px;
+    margin: 0 100px 2px 30px;
     border-radius: 10%;
     box-shadow: 10px 10px 10px black;
 }
@@ -63,7 +69,7 @@ header a {
 .terceira-imagem {
     width: 300px;
     height: 400px;
-    margin: 5px 50px 0 150px;
+    margin: 5px 50px 50px 150px;
     border-radius: 10%;
     box-shadow: 8px 8px 10px black;
 }
@@ -92,9 +98,14 @@ header a {
 }
 
 .video {
-    display: flex;
-    justify-content: center;
+    text-align: center;
     margin-top: 10%;
+}
+
+.video p {
+    padding: 40px 0;
+    font-size: 25px;
+    color: red;
 }
 
 #meu-video {
@@ -102,4 +113,17 @@ header a {
     height: 15%;
     box-shadow: 10px 10px 10px black;
     border-radius: 15px;
+}
+
+.rodape {
+    position: absolute;
+    width: 100%;
+    background-color: #ffcccc;
+    padding: 40px 0 25px 0;
+    margin: 80px 0 0 0 ;
+} 
+
+.rodape h2 {
+    color: red;
+    text-align: center;
 }
