--- a/pagina2/style.css
+++ b/pagina2/style.css
@@ -23,6 +23,18 @@ header p {
     color: red;
 }
 
+header h2 {
+    margin-top: 10%;
+    padding: 20px 5px;
+}
+
+.apresentacao {
+    margin: 50px 0 100px 0;
+    text-align: center;
+    color: red;
+    font-size: 25px;
+}
+
 .primeira {
     display: flex;
     margin: 0 400px 0 0px;
